objects/Opportunity.object
<CustomObject><businessProcesses>
        <fullName>Default Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>A - Pending Sale</fullName>
        </values>
        <values>
            <fullName>B - Decision Due</fullName>
        </values>
        <values>
            <fullName>C - Evaluation</fullName>
        </values>
        <values>
            <fullName>D - Qualified Suspect</fullName>
        </values>
        <values>
            <fullName>E - Suspect</fullName>
        </values>
        <values>
            <fullName>Non-Win</fullName>
        </values>
        <values>
            <fullName>Win</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>Account_Latin_Name_Formula__c</fullName>
        <formula>CASE( Account.Account_Name_Latin__c ,NULL, Account.Name ,Account.Account_Name_Latin__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Latin Name Formula</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_Name_Latin__c</fullName>
        <formula>Account.Account_Name_Latin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Latin</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_name_text__c</fullName>
        <description>this field is a copy of the Account in a text field so that it can be searched on</description>
        <label>Account Name (text)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Age_Days__c</fullName>
        <description>Calclulate Opportunity Age in Days : for open from Created to Now, for Closed from Created to Closed Date</description>
        <formula>IF(IsClosed ,ROUND((Close_Date_Time__c - CreatedDate),0), ROUND((Now() - CreatedDate),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Batch_Evaluate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Evaluate</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Call_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Close_Date_Time__c</fullName>
        <description>Opportunity Closed Date field converted to Date/Time for the reporting purpose</description>
        <formula>DATETIMEVALUE(CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Consulting_Revenue_User_Currency__c</fullName>
        <description>Amount converted to the running user currency</description>
        <formula>Consulting_Revenue__c / Currency_to_Corp__c * CASE($User.User_Currency__c ,"GBP", $Setup.Mathworks_Exchange_Rates__c.GBP_to_Corporate__c ,"AUD",$Setup.Mathworks_Exchange_Rates__c.AUD_to_Corporate__c,"CHF", $Setup.Mathworks_Exchange_Rates__c.CHF_To_Corporate__c,
"CNY", $Setup.Mathworks_Exchange_Rates__c.CNY_to_Corporate__c ,"DKK", $Setup.Mathworks_Exchange_Rates__c.DKK_To_Corporate__c ,"EUR", $Setup.Mathworks_Exchange_Rates__c.EUR_to_Corporate__c ,"INR", $Setup.Mathworks_Exchange_Rates__c.INR_To_Corporate__c ,
"JPY", $Setup.Mathworks_Exchange_Rates__c.JPY_To_Corporate__c ,"KRW", $Setup.Mathworks_Exchange_Rates__c.KRW_To_Corporate__c ,"NOK", $Setup.Mathworks_Exchange_Rates__c.NOK_To_Corporate__c ,"NZD", $Setup.Mathworks_Exchange_Rates__c.NZD_To_Corporate__c ,"SEK", $Setup.Mathworks_Exchange_Rates__c.SEK_To_Corporate__c ,"USD", 
$Setup.Mathworks_Exchange_Rates__c.USD_to_Corporate__c ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consulting Revenue (User Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Consulting_Revenue__c</fullName>
        <description>Summary field of opportunity products with revenue class of consulting</description>
        <label>Consulting Revenue</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Revenue_Class__c</field>
            <operation>equals</operation>
            <value>Consulting</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Created_By_Department__c</fullName>
        <formula>TEXT(CreatedBy.MW_Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Department</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Created_By_Office__c</fullName>
        <formula>TEXT(CreatedBy.MW_Office__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Office</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Currency_Changed_Date__c</fullName>
        <description>Last Date/Time opty currency was changed</description>
        <label>Currency Changed Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Currency_Current_User__c</fullName>
        <description>Used in Report to show Current Logged In Users Currency</description>
        <formula>$User.User_Currency__c</formula>
        <label>Currency (User Currency)</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Currency_to_Corp__c</fullName>
        <description>The formula calculates the current exchange rate between currency of the record and the corporate currency</description>
        <formula>CASE( Text(CurrencyIsoCode) , "GBP", $Setup.Mathworks_Exchange_Rates__c.GBP_to_Corporate__c ,"AUD",$Setup.Mathworks_Exchange_Rates__c.AUD_to_Corporate__c,"CHF", $Setup.Mathworks_Exchange_Rates__c.CHF_To_Corporate__c,
"CNY", $Setup.Mathworks_Exchange_Rates__c.CNY_to_Corporate__c ,"DKK", $Setup.Mathworks_Exchange_Rates__c.DKK_To_Corporate__c ,"EUR", $Setup.Mathworks_Exchange_Rates__c.EUR_to_Corporate__c ,"INR", $Setup.Mathworks_Exchange_Rates__c.INR_To_Corporate__c ,
"JPY", $Setup.Mathworks_Exchange_Rates__c.JPY_To_Corporate__c ,"KRW", $Setup.Mathworks_Exchange_Rates__c.KRW_To_Corporate__c ,"NOK", $Setup.Mathworks_Exchange_Rates__c.NOK_To_Corporate__c ,"NZD", $Setup.Mathworks_Exchange_Rates__c.NZD_To_Corporate__c ,"SEK", $Setup.Mathworks_Exchange_Rates__c.SEK_To_Corporate__c ,"USD", 
$Setup.Mathworks_Exchange_Rates__c.USD_to_Corporate__c ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency to Corp Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>DMAPP__Dealmaker_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealmaker Opportunity</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>DM_Opportunity_Extra</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ETL_External_Id__c</fullName>
        <description>This field is used through ETL    Initially we created the field for SMS Load.
This will not be visible on any page views.</description>
        <externalId>true</externalId>
        <label>ETL External Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Email_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Email Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Existing_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Existing Opportunity)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>First_Completed_Sales_Qualification__c</fullName>
        <inlineHelpText>First Completed Sales Qualification Activity (SQA) date.</inlineHelpText>
        <label>First Completed SQA Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>First_Sales_Qualification_Activity_Creat__c</fullName>
        <label>First SQA Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>First_Sales_Qualification_Activity_Owned__c</fullName>
        <label>First SQA Owned By</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>First_Sales_Qualification_Activity_Type__c</fullName>
        <label>First SQA Type</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>First_activity_completed_date__c</fullName>
        <description>this will capture completed date of first activity (excluding activity which was created during lead conversion)</description>
        <label>First Activity Completed Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Initial_SMS_Amount__c</fullName>
        <label>Initial SMS Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Initial_SMS_Currency_Code__c</fullName>
        <label>Initial SMS Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Key_Opportunity__c</fullName>
        <label>Key Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TAH</fullName>
                </value>
                <value>
                    <fullName>TAH - (Including MAOTS)</fullName>
                </value>
                <value>
                    <fullName>TAH - (MAOTS Only)</fullName>
                </value>
                <value>
                    <fullName>Commercial Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Last_Opportunity_Amount_Change_Date__c</fullName>
        <description>Date/Time when last opty revenue amount was changed</description>
        <label>Revenue Amount Changed Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Lead_Converted_Opportunity__c</fullName>
        <description>Check box to indicate that an opportunity was created from a converted lead</description>
        <formula>IF ((ISNULL(Salesforce_Lead_ID__c) || Salesforce_Lead_ID__c = '') ,False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity was created from a converted lead</inlineHelpText>
        <label>Lead Converted Opportunity</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will be used by Opty Reorg process to bypass reorg of the locked opportunities</description>
        <label>Lock Assignment</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Master_License_Id__c</fullName>
        <description>Master License id is free text field entered by user. System doesn't do validation on master license id. The field will be loaded with SMS, entered manually, updated by users. View license functionality based on the data in the field</description>
        <label>Master License Id</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Next_Activity_Due_Date__c</fullName>
        <description>will capture the due date of next activity</description>
        <inlineHelpText>due date of next activity</inlineHelpText>
        <label>Next Activity Due Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Opp_Creator_Role__c</fullName>
        <formula>TEXT(CreatedBy.Functional_Role__c)</formula>
        <label>Opp_Creator_Role</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Opp_Stage_for_TSR__c</fullName>
        <description>to capture thecurrent Opp Stage to pass into the TSR</description>
        <label>Opp Stage for TSR</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Opportunity_Amount_User_Currency__c</fullName>
        <description>Opportunity amount converted to the running user currency amount</description>
        <formula>(Amount  /  Currency_to_Corp__c)*CASE($User.User_Currency__c ,"GBP", $Setup.Mathworks_Exchange_Rates__c.GBP_to_Corporate__c ,"AUD",$Setup.Mathworks_Exchange_Rates__c.AUD_to_Corporate__c,"CHF", $Setup.Mathworks_Exchange_Rates__c.CHF_To_Corporate__c,
"CNY", $Setup.Mathworks_Exchange_Rates__c.CNY_to_Corporate__c ,"DKK", $Setup.Mathworks_Exchange_Rates__c.DKK_To_Corporate__c ,"EUR", $Setup.Mathworks_Exchange_Rates__c.EUR_to_Corporate__c ,"INR", $Setup.Mathworks_Exchange_Rates__c.INR_To_Corporate__c ,
"JPY", $Setup.Mathworks_Exchange_Rates__c.JPY_To_Corporate__c ,"KRW", $Setup.Mathworks_Exchange_Rates__c.KRW_To_Corporate__c ,"NOK", $Setup.Mathworks_Exchange_Rates__c.NOK_To_Corporate__c ,"NZD", $Setup.Mathworks_Exchange_Rates__c.NZD_To_Corporate__c ,"SEK", $Setup.Mathworks_Exchange_Rates__c.SEK_To_Corporate__c ,"USD", 
$Setup.Mathworks_Exchange_Rates__c.USD_to_Corporate__c,1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (User Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Opportunity_Closed_Date_Changed__c</fullName>
        <description>Date/Time when Opportunity Closed Date was changed</description>
        <label>Closed Date Changed</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Opportunity_Previous_Stage_Changed_Date__c</fullName>
        <description>Date/Time when Opportunity Previous Stage was set - Date/Time when Opportunity prior stage value was changed</description>
        <label>Previous Stage Changed Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Owner_Change_Date_Time__c</fullName>
        <description>Date/Time when Opportunity owner was changed, not populated when opportunity created and owner set automatically</description>
        <label>Owner Change Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Owner_Current_Role__c</fullName>
        <formula>TEXT(Owner.Functional_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Current Role</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enable the users to create a relationship between Opportunities</description>
        <inlineHelpText>Use this field to create a relationship between Opportunities</inlineHelpText>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Related_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Perpetual_Revenue_User_Currency__c</fullName>
        <description>Amount converted to the running user currency</description>
        <formula>Perpetual_Revenue__c / Currency_to_Corp__c * CASE($User.User_Currency__c ,"GBP", $Setup.Mathworks_Exchange_Rates__c.GBP_to_Corporate__c ,"AUD",$Setup.Mathworks_Exchange_Rates__c.AUD_to_Corporate__c,"CHF", $Setup.Mathworks_Exchange_Rates__c.CHF_To_Corporate__c,
"CNY", $Setup.Mathworks_Exchange_Rates__c.CNY_to_Corporate__c ,"DKK", $Setup.Mathworks_Exchange_Rates__c.DKK_To_Corporate__c ,"EUR", $Setup.Mathworks_Exchange_Rates__c.EUR_to_Corporate__c ,"INR", $Setup.Mathworks_Exchange_Rates__c.INR_To_Corporate__c ,
"JPY", $Setup.Mathworks_Exchange_Rates__c.JPY_To_Corporate__c ,"KRW", $Setup.Mathworks_Exchange_Rates__c.KRW_To_Corporate__c ,"NOK", $Setup.Mathworks_Exchange_Rates__c.NOK_To_Corporate__c ,"NZD", $Setup.Mathworks_Exchange_Rates__c.NZD_To_Corporate__c ,"SEK", $Setup.Mathworks_Exchange_Rates__c.SEK_To_Corporate__c ,"USD", 
$Setup.Mathworks_Exchange_Rates__c.USD_to_Corporate__c ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perpetual Revenue (User Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Perpetual_Revenue__c</fullName>
        <description>Summary field of opportunity products with revenue class of perpetual</description>
        <label>Perpetual Revenue</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Revenue_Class__c</field>
            <operation>equals</operation>
            <value>Perpetual</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Previous_Stage__c</fullName>
        <description>Capture the value of the value of the stage when it's changed</description>
        <label>Previous Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact on the opportunity</description>
        <inlineHelpText>Primary contact on the opportunity</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Primary_Contact_text__c</fullName>
        <description>this field is a copy of the Primary Contact in a text field so that it can be searched on</description>
        <label>Primary Contact (text)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Primary_Purpose__c</fullName>
        <inlineHelpText>To view the Primary Purpose definitions, go to SharePoint then search "Primary Purpose" and look for the Best Bet in the search results</inlineHelpText>
        <label>Primary Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Account - New License(s)</fullName>
                </value>
                <value>
                    <fullName>Licensed Account - New Solution</fullName>
                </value>
                <value>
                    <fullName>Licensed Account - Additional Seat(s)</fullName>
                </value>
                <value>
                    <fullName>Licensed Account - New Division, Group or Project</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>To view the Non-Win Reason definitions, go to SharePoint then search "Non-Win Reasons" and look for the Best Bet in the search results</inlineHelpText>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Existing Opportunity</fullName>
                </value>
                <value>
                    <fullName>Existing License</fullName>
                </value>
                <value>
                    <fullName>Home Use</fullName>
                </value>
                <value>
                    <fullName>Insufficient Pain/Need</fullName>
                </value>
                <value>
                    <fullName>No Budget/Not Funded</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Product Lacking Functionality</fullName>
                </value>
                <value>
                    <fullName>Program Cancelled/Ended</fullName>
                </value>
                <value>
                    <fullName>Partners/Connections</fullName>
                </value>
                <value>
                    <fullName>Reseller/Distributors</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Unable to Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Non Licensed User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Related_Partner_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to relate an opportunity to a partner agreement.</description>
        <inlineHelpText>Relate this opportunity to a partner agreement</inlineHelpText>
        <label>Related Partner Agreement</label>
        <referenceTo>Partner_Agreement__c</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Revenue_Size__c</fullName>
        <formula>IF( USD_Amount__c &gt;100000,'Large',  IF((USD_Amount__c &gt; 20000 &amp;&amp; USD_Amount__c &lt;=100000), 'Medium',  IF(USD_Amount__c &gt; 5000&amp;&amp; USD_Amount__c &lt;=20000, 'Small', 'Very Small') ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Size (USD)</label>
        <type>Text</type>
    </fields><fields>
        <fullName>SMS_Revenue_User_Currency__c</fullName>
        <description>Amount converted to the running user currency</description>
        <formula>SMS_Revenue__c / Currency_to_Corp__c * CASE($User.User_Currency__c ,"GBP", $Setup.Mathworks_Exchange_Rates__c.GBP_to_Corporate__c ,"AUD",$Setup.Mathworks_Exchange_Rates__c.AUD_to_Corporate__c,"CHF", $Setup.Mathworks_Exchange_Rates__c.CHF_To_Corporate__c,
"CNY", $Setup.Mathworks_Exchange_Rates__c.CNY_to_Corporate__c ,"DKK", $Setup.Mathworks_Exchange_Rates__c.DKK_To_Corporate__c ,"EUR", $Setup.Mathworks_Exchange_Rates__c.EUR_to_Corporate__c ,"INR", $Setup.Mathworks_Exchange_Rates__c.INR_To_Corporate__c ,
"JPY", $Setup.Mathworks_Exchange_Rates__c.JPY_To_Corporate__c ,"KRW", $Setup.Mathworks_Exchange_Rates__c.KRW_To_Corporate__c ,"NOK", $Setup.Mathworks_Exchange_Rates__c.NOK_To_Corporate__c ,"NZD", $Setup.Mathworks_Exchange_Rates__c.NZD_To_Corporate__c ,"SEK", $Setup.Mathworks_Exchange_Rates__c.SEK_To_Corporate__c ,"USD", 
$Setup.Mathworks_Exchange_Rates__c.USD_to_Corporate__c ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMS Revenue (User Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>SMS_Revenue__c</fullName>
        <description>Summary field of opportunity products with revenue class of SMS</description>
        <label>SMS Revenue</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Revenue_Class__c</field>
            <operation>equals</operation>
            <value>SMS</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>SMS__c</fullName>
        <description>If only SMS revenue is on the opp then flag it as an SMS opp, or if the Primary Purpose is Renewal, also flag it as an SMS opp.  If neither are true, then it is not an SMS opp.</description>
        <formula>IF( 
    AND(
        SMS_Revenue__c &gt; 0
        ,Consulting_Revenue__c = 0
        ,Term_Renewal_Revenue__c = 0
        ,Perpetual_Revenue__c = 0
        ,Term_New_Revenue__c = 0
        ,Training_Revenue__c = 0
    )
    ,TRUE    
    ,IF(
        AND(
            ISPICKVAL(Primary_Purpose__c,"Renewal")
            ,Amount = 0
        )
        ,TRUE
        ,FALSE
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flag for whether this Opportunity is SMS - used for assignment and closed loop reporting</inlineHelpText>
        <label>SMS</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Salesforce_Lead_ID__c</fullName>
        <description>will contain salesforce lead id</description>
        <label>Salesforce Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Salesforce_Opportunity_ID__c</fullName>
        <description>This field is used to capture the Salesforce record ID for the opportunity record so it is searchable inside the Salesforce UI.</description>
        <externalId>true</externalId>
        <label>Salesforce Opportunity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Service_End_Date__c</fullName>
        <description>Read only field except for the SM Loader. Capture the original Service End Date of the SMS opportunity. Not displayed on page layout</description>
        <label>Service End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Siebel_Opportunity_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Siebel opportunity id. used for integration and data migration</description>
        <externalId>true</externalId>
        <label>Siebel Opportunity ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Stage_Duration__c</fullName>
        <formula>IF(IsClosed, IF( ISBLANK( Opportunity_Previous_Stage_Changed_Date__c ), ROUND((  Close_Date_Time__c  -  CreatedDate),0) , ROUND((  Close_Date_Time__c  - Opportunity_Previous_Stage_Changed_Date__c),0)),
IF( ISBLANK( Opportunity_Previous_Stage_Changed_Date__c ), ROUND((NOW()- CreatedDate),0) , ROUND((NOW()- Opportunity_Previous_Stage_Changed_Date__c),0))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>System_Close_Date__c</fullName>
        <description>This is a hidden, non-editable field which takes the current date/time value when the opportunity is closed.</description>
        <label>System Close Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Term_New_Revenue_User_Currency__c</fullName>
        <formula>Term_New_Revenue__c / Currency_to_Corp__c * CASE($User.User_Currency__c ,"GBP", $Setup.Mathworks_Exchange_Rates__c.GBP_to_Corporate__c ,"AUD",$Setup.Mathworks_Exchange_Rates__c.AUD_to_Corporate__c,"CHF", $Setup.Mathworks_Exchange_Rates__c.CHF_To_Corporate__c,
"CNY", $Setup.Mathworks_Exchange_Rates__c.CNY_to_Corporate__c ,"DKK", $Setup.Mathworks_Exchange_Rates__c.DKK_To_Corporate__c ,"EUR", $Setup.Mathworks_Exchange_Rates__c.EUR_to_Corporate__c ,"INR", $Setup.Mathworks_Exchange_Rates__c.INR_To_Corporate__c ,
"JPY", $Setup.Mathworks_Exchange_Rates__c.JPY_To_Corporate__c ,"KRW", $Setup.Mathworks_Exchange_Rates__c.KRW_To_Corporate__c ,"NOK", $Setup.Mathworks_Exchange_Rates__c.NOK_To_Corporate__c ,"NZD", $Setup.Mathworks_Exchange_Rates__c.NZD_To_Corporate__c ,"SEK", $Setup.Mathworks_Exchange_Rates__c.SEK_To_Corporate__c ,"USD", 
$Setup.Mathworks_Exchange_Rates__c.USD_to_Corporate__c ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term New Revenue (User Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Term_New_Revenue__c</fullName>
        <description>Summary field of opportunity products with revenue class of Term</description>
        <label>Term New Revenue</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Revenue_Class__c</field>
            <operation>equals</operation>
            <value>Term New</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Term_Renewal_Revenue_User_Currency__c</fullName>
        <formula>Term_Renewal_Revenue__c / Currency_to_Corp__c * CASE($User.User_Currency__c ,"GBP", $Setup.Mathworks_Exchange_Rates__c.GBP_to_Corporate__c ,"AUD",$Setup.Mathworks_Exchange_Rates__c.AUD_to_Corporate__c,"CHF", $Setup.Mathworks_Exchange_Rates__c.CHF_To_Corporate__c,
"CNY", $Setup.Mathworks_Exchange_Rates__c.CNY_to_Corporate__c ,"DKK", $Setup.Mathworks_Exchange_Rates__c.DKK_To_Corporate__c ,"EUR", $Setup.Mathworks_Exchange_Rates__c.EUR_to_Corporate__c ,"INR", $Setup.Mathworks_Exchange_Rates__c.INR_To_Corporate__c ,
"JPY", $Setup.Mathworks_Exchange_Rates__c.JPY_To_Corporate__c ,"KRW", $Setup.Mathworks_Exchange_Rates__c.KRW_To_Corporate__c ,"NOK", $Setup.Mathworks_Exchange_Rates__c.NOK_To_Corporate__c ,"NZD", $Setup.Mathworks_Exchange_Rates__c.NZD_To_Corporate__c ,"SEK", $Setup.Mathworks_Exchange_Rates__c.SEK_To_Corporate__c ,"USD", 
$Setup.Mathworks_Exchange_Rates__c.USD_to_Corporate__c ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Renewal Revenue (User Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Term_Renewal_Revenue__c</fullName>
        <description>Summary field of opportunity products with revenue class of New Term</description>
        <label>Term Renewal Revenue</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Revenue_Class__c</field>
            <operation>equals</operation>
            <value>Term Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Territory_Name__c</fullName>
        <description>name of the territory</description>
        <formula>Account.Territory_Name__c</formula>
        <label>Territory Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Territory_Team_Role__c</fullName>
        <label>Territory Team Role</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Territory__c</fullName>
        <description>Link to the territory team if territory is assigned</description>
        <formula>Account.Territory__c</formula>
        <label>Territory</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Times_Opportunity_Closed_Date_Changed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Calculated # of Times Opportunity Closed Date was changed</description>
        <label># Times Closed Date Changed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Outbound_Attempts__c</fullName>
        <formula>Call_Attempts__c  +  Email_Attempts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outbound Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>    </validationRules></CustomObject>